# hex-editor

./: Cargo.toml
src/: app.rs  main.rs  model.rs
src/app/: grid.rs  renderer.rs
src/app/grid/hex_utils/: hexagon.rs  point.rs
src/model/: hexagon.rs  point.rs
src/shaders/: fragment.glsl  vertex.glsl
