[package]
name = "hex-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = "0.28.1"
emath = "0.28.1"
float_eq = {version = "1.0.1", features = ["derive"]}
cgmath = "0.18.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
